# spellbook

./: Dockerfile  README.md  README_CICD.md  README_LOCAL-DOCKER-WINDOWS.md  README_LOCAL-DOCKER.md  README_SOURCE.md  docker-compose.yml  pyproject.toml  spellbook.py  spellbook.yaml
.github/workflows/: container-publish-dockerhub.yaml  semgrep.yml
.github/workflows/workflows/: container-publish-dockerhub.yaml  container-publish-ghcr.yaml
spellbook/: __init__.py  content_importer.py  instance.py  pack_builder.py  pack_template.py  template_renderer.py  version_manager.py  xsiam_validator.py
spellbook/templates/intel_retrohunt/Playbooks/: XQL_HUNT_QUERY.xql  playbook.yml
